<resources>
    <string name="app_name">AICP Extras</string>
    <string name="user_interface_category">UI</string>
    <string name="system_category">System</string>
    <string name="other_category">Other</string>
    <string name="default_value">Default</string>
    <string name="status_bar_title">Status bar</string>
    <string name="status_bar_summary">Edit status bar appearance</string>
    <string name="sb_battery_category_title">Customize statusbar battery icon</string>
    <string name="status_bar_battery_title">Battery icon</string>
    <string name="status_bar_battery_summary">Click for battery icon display options</string>
    <string name="status_bar_battery_style_title">Battery icon style</string>
    <string name="status_bar_battery_style_icon_portrait">Icon portrait</string>
    <string name="status_bar_battery_style_icon_rlandscape">Icon landscape (Right)</string>
    <string name="status_bar_battery_style_icon_landscape">Icon landscape (Left)</string>
    <string name="status_bar_battery_style_circle">Circle</string>
    <string name="status_bar_battery_style_dotted_circle">Dotted circle</string>
    <string name="status_bar_battery_style_filled_circle">Filled circle</string>
    <string name="status_bar_battery_style_text">Text</string>
    <string name="status_bar_battery_style_hidden">Hidden</string>
    <string name="status_bar_battery_percentage_title">Battery percentage</string>
    <string name="status_bar_battery_percentage_hidden">Hidden</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
    <string name="status_bar_battery_percentage_text_next_right">Next to the icon (right)</string>
    <string name="status_bar_battery_percentage_text_next_left">Next to the icon (left)</string>
    <string name="status_bar_battery_text_charging_title">Battery percentage when charging</string>
    <string name="status_bar_battery_text_charging_summary">Always display battery percentage when charging</string>
    <string name="qs_battery_category_title">Customize QS battery icon</string>
    <string name="qs_battery_location_title">Battery location</string>
    <string name="qs_battery_location_qs_panel">QS Panel</string>
    <string name="qs_battery_location_qs_statusbar">Quick Statusbar</string>
    <string name="qs_use_status_bar_battery_style">Follow status bar style</string>
    <string name="bluetooth_battery_title">Bluetooth battery status</string>
    <string name="battery_bar_title">Battery bar</string>
    <string name="battery_bar_summary">Click for battery bar options</string>
    <string name="status_bar_clock_title">Clock</string>
    <string name="status_bar_clock_summary">Click for possible clock options</string>
    <string name="status_bar_icons_category_title">Icons</string>
    <string name="status_bar_battery_category_title">Battery options</string>
    <string name="status_bar_others_category_title">Others</string>
    <string name="status_bar_logo_title">Logo</string>
    <string name="status_bar_logo_summary">Enable to display logo in the status bar</string>
    <string name="show_4g_title">Show 4G</string>
    <string name="show_4g_summary">Show 4G instead of LTE signal icon</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_summary">Extended notifications control</string>
    <string name="quick_settings_title">Quick settings</string>
    <string name="quick_settings_summary">Edit quick settings appearance</string>
    <string name="recents_title">Recents</string>
    <string name="recents_summary">Edit recents apps screen appearance</string>
    <string name="lockscreen_title">Lockscreen</string>
    <string name="lockscreen_summary">Edit lockscreen appearance</string>
    <string name="lockscreen_security_category">Security</string>
    <string name="lockscreen_others_category_title">Others</string>
    <string name="double_tap_sleep_lockscreen">Double tap to sleep</string>
    <string name="double_tap_sleep_lockscreen_summary">Double tap to sleep on lockscreen to sleep device</string>
    <string name="ls_media_art_title">Media cover art</string>
    <string name="ls_media_art_summary">Display media cover art when available</string>
    <string name="ls_media_art_filter_title">Media cover art filter</string>
    <string name="ls_media_art_fade_level_title">Media cover art fade level</string>
    <string name="ls_media_art_fade_level_summary">Set media cover art fade level</string>
    <string name="ls_media_art_blur_level_title">Media art blur level</string>
    <string name="ls_media_art_blur_level_summary">Blur intensity when blur filter is applied</string>
    <string name="lockscreen_battery_info_title">Battery info</string>
    <string name="lockscreen_battery_info_summary">Display negotiated charger max current-voltage and battery temperature on lockscreen while charging</string>
    <string name="lockscreen_enable_power_menu_title">Power menu</string>
    <string name="lockscreen_enable_power_menu_summary">Allow accessing power menu on secure lock screen</string>
    <string name="global_actions_onthego_title">On-The-Go</string>
    <string name="global_actions_onthego_summary">Add On-The-Go toggle to Power Menu</string>
    <string name="global_actions_screenrecord_title">Screenrecord</string>
    <string name="global_actions_screenrecord_summary">Add Screenrecord toggle to Power Menu</string>
    <string name="global_actions_screenshot_title">Screenshot</string>
    <string name="global_actions_screenshot_summary">Add Screenshot toggle to Power Menu</string>
    <string name="global_actions_reboot_title">Reboot</string>
    <string name="global_actions_reboot_summary">Add Reboot toggle to Power Menu</string>
    <string name="global_actions_advanced_reboot_title">Advanced Reboot</string>
    <string name="global_actions_advanced_reboot_summary">Add Advanced Reboot toggle to Power Menu</string>
    <string name="global_actions_emergency_title">Emergency</string>
    <string name="global_actions_emergency_summary">Add Emergency dialing to Power Menu</string>
    <string name="global_actions_power_menu_title">Power menu</string>
    <string name="lockscreen_hide_status_bar_title">Hide Statusbar</string>
    <string name="lockscreen_hide_status_bar_summary">When enabled, statusbar will be hidden on lockscreen</string>
    <string name="other_ui_title">Other UI tweaks</string>
    <string name="other_ui_summary">Various misc</string>
    <string name="system_animations_title">Animations</string>
    <string name="system_animations_summary">System animations</string>
    <string name="system_behaviour_title">System behaviour</string>
    <string name="system_behaviour_summary">System tweaks</string>
    <string name="system_extensions_title">System extensions</string>
    <string name="system_extensions_summary">System addons</string>
    <string name="log_it_title">Log it all!</string>
    <string name="log_it_summary">Logcat, kmesg, dmesg</string>
    <string name="ae_settings_title">AE customization</string>
    <string name="ae_settings_summary">Customize the look and behaviour of AICP Extras</string>
    <string name="about_title">About</string>
    <string name="about_summary">View information about this ROM</string>
    <string name="weblinks_category">Weblinks</string>
    <string name="info_category">Info</string>
    <string name="aicp_website_title">Website</string>
    <string name="aicp_website_summary">Visit the AICP website</string>
    <string name="aicp_website_link" translatable="false">"https://aicp-rom.com"</string>
    <string name="aicp_walls_title">Wallpapers</string>
    <string name="aicp_walls_summary">See our AICP wallpapers</string>
    <string name="aicp_walls_link" translatable="false">"https://media.aicp-rom.com/images/wallpapers/"</string>
    <string name="discord_title">Discord server</string>
    <string name="discord_summary">Visit our Discord Server</string>
    <string name="discord_link" translatable="false">"https://discord.gg/nMQUVRD"</string>
    <string name="aicp_gerrit_title">Gerrit</string>
    <string name="aicp_gerrit_summary">Visit our gerrit to know what we are working on</string>
    <string name="aicp_gerrit_link" translatable="false">"https://gerrit.aicp-rom.com"</string>
    <string name="aicp_changelog_title">Changelog</string>
    <string name="aicp_changelog_summary">View recent changes made to AICP</string>
    <string name="aicp_downloads_title">Downloads</string>
    <string name="aicp_downloads_summary">Visit the AICP download page for your device</string>
    <string name="aicp_downloads_link" translatable="false">"https://dwnld.aicp-rom.com/"</string>
    <string name="aicp_ota_title">Update center</string>
    <string name="aicp_ota_summary">Check for AICP updates</string>
    <string name="stats_title">Statistics</string>
    <string name="stats_summary">Opt in/out for anonymous stats</string>
    <string name="device_maintainer_title">Device maintainer</string>
    <string name="aicp_version_title">AICP version</string>
    <string name="build_date_title">Build date</string>
    <string name="pulse_settings">Pulse</string>
    <string name="pulse_settings_summary">Audio graphic equalizer. Click for options.</string>
    <string name="custom_carrier_label_title">Custom carrier label</string>
    <string name="show_carrier_title">Carrier label</string>
    <string name="show_carrier_summary">Show a carrier label on the left</string>
    <string name="force_ambient_for_media_pref_title">Ambient music</string>
    <string name="force_ambient_for_media_pref_summary">Enable to show active music track info in Ambient display</string>
    <string name="pulse_on_new_tracks_title">Ambient music ticker</string>
    <string name="pulse_on_new_tracks_summary">Show music ticker on Ambient Display during track change</string>
    <string name="data_disabled_icon_title">Show data disabled icon</string>
    <string name="data_disabled_icon_summary">Display a exclamation mark next to statusbar when data is disabled</string>
    <string name="partial_screenshot_as_default_title">Partial screenshot as default action</string>
    <string name="partial_screenshot_as_default_summary">Set partial screenshot as default action for Screenshot button in power menu. Otherwise a long press action triggers it.</string>
    <string name="power_menu_boot_options_category_title">Boot options</string>
    <string name="power_menu_actions_category_title">Power menu actions</string>
    <string name="lockscreen_charge_temp_unit_title">Temperature unit</string>
    <string name="volte_icon_style_title">VoLTE icon - SystemUI restart needed!</string>
    <string name="vowifi_icon_title">VoWiFi icon - SystemUI restart needed!</string>
    <string name="show_wifi_standard_icon_title">Show Wi-Fi Standard icon</string>
    <string name="show_wifi_standard_icon_summary">Show Wi-Fi type in Wi-Fi signal indicator</string>
    <string name="tint_statusbar_icons_with_accent_title">Tint statusbar icons</string>
    <string name="tint_statusbar_icons_with_accent_summary">Use accent color to tint statusbar icons</string>
    <string name="keybox_data_title">Keybox attestation override</string>
    <string name="pif_data_title">Select PIF JSON to spoof</string>
    <string name="spoofing_attestation_category_title">Attestation</string>
    <string name="spoofing_apps_category_title">App Spoofing</string>
    <string name="spoofing_integrity_category_title">Google Play Integrity</string>
    <string name="pi_spoof_title">Google Play Integrity spoof</string>
    <string name="pi_spoof_summary">Spoof your device as different model for Google Play Integrity</string>
    <string name="pixel_spoofing_apps_title">Pixel spoofing apps</string>
    <string name="pixel_spoofing_apps_summary">Select apps to spoof as Pixel 10 Pro XL</string>
    <string name="spoofing_title">Spoofing</string>
</resources>