<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (C) 2017 AICP
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_name">


    <!-- AICP logo -->
    <com.aicp.extras.preference.LongClickablePreference
        android:key="aicp_logo"
        android:layout="@layout/dashboard_logo" />


    <PreferenceCategory
        android:title="@string/user_interface_category">


        <PreferenceScreen
            android:title="@string/status_bar_title"
            android:summary="@string/status_bar_summary"
            android:icon="@drawable/ic_settings_status_bar"
            android:fragment="com.aicp.extras.fragments.StatusBar" />

        <PreferenceScreen
            android:title="@string/notifications_title"
            android:summary="@string/notifications_summary"
            android:icon="@drawable/ic_settings_notifications"
            android:fragment="com.aicp.extras.fragments.Notifications" />

        <PreferenceScreen
            android:title="@string/quick_settings_title"
            android:summary="@string/quick_settings_summary"
            android:icon="@drawable/ic_settings_quick_settings"
            android:fragment="com.aicp.extras.fragments.QuickSettings" />

        <PreferenceScreen
            android:title="@string/recents_title"
            android:summary="@string/recents_summary"
            android:icon="@drawable/ic_settings_recents"
            android:fragment="com.aicp.extras.fragments.Recents" />

        <PreferenceScreen
            android:title="@string/lockscreen_title"
            android:summary="@string/lockscreen_summary"
            android:icon="@drawable/ic_settings_lockscreen"
            android:fragment="com.aicp.extras.fragments.Lockscreen" />

        <PreferenceScreen
            android:title="@string/panel_porn_title"
            android:summary="@string/panel_porn_summary"
            android:icon="@drawable/ic_settings_panel_porn"
            android:fragment="com.aicp.extras.fragments.PanelPorn" />

        <PreferenceScreen
            android:title="@string/other_ui_title"
            android:summary="@string/other_ui_summary"
            android:icon="@drawable/ic_settings_other_ui"
            android:fragment="com.aicp.extras.fragments.OtherUi" />

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/system_category">

        <PreferenceScreen
            android:title="@string/system_animations_title"
            android:summary="@string/system_animations_summary"
            android:icon="@drawable/ic_settings_system_animations"
            android:fragment="com.aicp.extras.fragments.SystemAnimations" />

        <PreferenceScreen
            android:title="@string/system_behaviour_title"
            android:summary="@string/system_behaviour_summary"
            android:icon="@drawable/ic_settings_system_behaviour"
            android:fragment="com.aicp.extras.fragments.SystemBehaviour" />

        <PreferenceScreen
            android:title="@string/system_extensions_title"
            android:summary="@string/system_extensions_summary"
            android:icon="@drawable/ic_settings_system_extensions"
            android:fragment="com.aicp.extras.fragments.SystemExtensions" />

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/other_category">

        <PreferenceScreen
            android:title="@string/about_title"
            android:summary="@string/about_summary"
            android:icon="@drawable/ic_settings_about"
            android:fragment="com.aicp.extras.fragments.About" />

        <Preference
            android:key="aicp_ota"
            android:title="@string/aicp_ota_title"
            android:summary="@string/aicp_ota_summary"
            android:icon="@drawable/ic_settings_ota" />

        <PreferenceScreen
            android:key="log_it"
            android:title="@string/log_it_title"
            android:summary="@string/log_it_summary"
            android:icon="@drawable/ic_settings_log_it"
            android:fragment="com.aicp.extras.fragments.LogIt" />

        <PreferenceScreen
            android:title="@string/ae_settings_title"
            android:summary="@string/ae_settings_summary"
            android:icon="@drawable/ic_settings_ae_customization"
            android:fragment="com.aicp.extras.fragments.AeSettings" />

    </PreferenceCategory>

</PreferenceScreen>
