<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (C) 2017 AICP
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aicpextras="http://schemas.android.com/apk/res-auto"
    android:key="lockscreen"
    android:title="@string/lockscreen_title">

    <com.aicp.gear.preference.SystemSettingSwitchPreference
        android:key="double_tap_sleep_lockscreen"
        android:title="@string/double_tap_sleep_lockscreen"
        android:summary="@string/double_tap_sleep_lockscreen_summary"
        android:defaultValue="false"/>

    <com.aicp.gear.preference.SystemSettingSwitchPreference
        android:key="lockscreen_battery_info"
        android:title="@string/lockscreen_battery_info_title"
        android:summary="@string/lockscreen_battery_info_summary"
        android:defaultValue="false" />

    <com.aicp.gear.preference.SystemSettingListPreference
        android:key="lockscreen_charge_temp_unit"
        android:title="@string/lockscreen_charge_temp_unit_title"
        android:entries="@array/lockscreen_charge_temp_unit_entries"
        android:entryValues="@array/lockscreen_charge_temp_unit_values"
        android:dependency="lockscreen_battery_info"
        android:defaultValue="1" />
        <Preference
            android:key="navbar_pulse_options"
            android:title="@string/pulse_settings"
            android:summary="@string/pulse_settings_summary"
            android:fragment="com.aicp.extras.fragments.PulseSettings" />

    <com.aicp.gear.preference.SystemSettingSwitchPreference
        android:key="force_ambient_for_media"
        android:title="@string/force_ambient_for_media_pref_title"
        android:summary="@string/force_ambient_for_media_pref_summary"
        android:defaultValue="false"
        android:fragment="com.aicp.extras.fragments.AmbientMediaTicker" />

    <com.aicp.gear.preference.SecureSettingSwitchPreference
        android:key="pulse_on_new_tracks"
        android:title="@string/pulse_on_new_tracks_title"
        android:summary="@string/pulse_on_new_tracks_summary"
        android:defaultValue="true" />

    <com.aicp.gear.preference.SystemSettingSwitchPreference
        android:key="ls_media_art_enabled"
        android:title="@string/ls_media_art_title"
        android:summary="@string/ls_media_art_summary"
        android:defaultValue="false" />

    <com.aicp.gear.preference.SystemSettingListPreference
        android:key="ls_media_art_filter"
        android:title="@string/ls_media_art_filter_title"
        android:entries="@array/ls_media_art_filter_entries"
        android:entryValues="@array/ls_media_art_filter_values"
        android:dependency="ls_media_art_enabled"
        android:defaultValue="0" />

    <com.aicp.gear.preference.SystemSettingSliderPreference
        android:key="ls_media_art_fade_level"
        android:title="@string/ls_media_art_fade_level_title"
        android:summary="@string/ls_media_art_fade_level_summary"
        android:defaultValue="40"
        android:max="100"
        android:min="0"
        android:dependency="ls_media_art_enabled" />

    <com.aicp.gear.preference.SystemSettingSliderPreference
        android:key="ls_media_art_blur_level"
        android:title="@string/ls_media_art_blur_level_title"
        android:summary="@string/ls_media_art_blur_level_summary"
        android:max="600"
        android:min="0"
        aicpextras:unitsLeft=""
        aicpextras:unitsRight="dp"
        android:defaultValue="200"
        android:dependency="ls_media_art_enabled" />
    -->
    
    <PreferenceCategory
          android:key="lockscreen_security_category"
          android:title="@string/lockscreen_security_category">
          <com.aicp.gear.preference.GlobalSettingSwitchPreference
              android:key="lockscreen_enable_power_menu"
              android:title="@string/lockscreen_enable_power_menu_title"
              android:summary="@string/lockscreen_enable_power_menu_summary"
              android:defaultValue="true"/>

          <com.aicp.gear.preference.SystemSettingSwitchPreference
              android:key="hide_lockscreen_status_bar"
              android:title="@string/lockscreen_hide_status_bar_title"
              android:summary="@string/lockscreen_hide_status_bar_summary"
              android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
       android:key="lockscreen_others_category"
       android:title="@string/lockscreen_others_category_title">

       <com.aicp.gear.preference.SystemSettingSwitchPreference
           android:key="lockscreen_show_carrier"
           android:title="@string/show_carrier_title"
           android:summary="@string/show_carrier_summary"
           android:defaultValue="true" />

       <Preference
           android:key="lockscreen_show_custom_carrier_text"
           android:title="@string/custom_carrier_label_title" />

    </PreferenceCategory>

</PreferenceScreen>
