<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (C) 2017 AICP
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aicpextras="http://schemas.android.com/apk/res-auto"
    xmlns:settings="http://schemas.android.com/apk/res-auto"
    android:key="status_bar"
    android:title="@string/status_bar_title">

    <PreferenceCategory
        android:key="statusbar_icons_category"
        android:title="@string/status_bar_icons_category_title">

        <com.aicp.gear.preference.SystemSettingMasterSwitchPreference
            android:key="status_bar_clock"
            android:title="@string/status_bar_clock_title"
            android:summary="@string/status_bar_clock_summary"
            android:defaultValue="true"
            android:fragment="com.aicp.extras.fragments.StatusBarClockSettings" />

        <com.aicp.gear.preference.SystemSettingMasterSwitchPreference
            android:key="status_bar_logo"
            android:title="@string/status_bar_logo_title"
            android:summary="@string/status_bar_logo_summary"
            android:defaultValue="false"
            android:fragment="com.aicp.extras.fragments.StatusBarLogo" />

        <com.aicp.gear.preference.SystemSettingSwitchPreference
            android:key="tint_statusbar_icons_with_accent"
            android:title="@string/tint_statusbar_icons_with_accent_title"
            android:summary="@string/tint_statusbar_icons_with_accent_summary"
            android:defaultValue="false" />

        <com.aicp.gear.preference.SystemSettingSwitchPreference
            android:key="show_fourg_icon"
            android:title="@string/show_4g_title"
            android:summary="@string/show_4g_summary"
            android:defaultValue="false" />
        <com.aicp.gear.preference.SystemSettingSwitchPreference
            android:key="data_disabled_icon"
            android:title="@string/data_disabled_icon_title"
            android:summary="@string/data_disabled_icon_summary"
            android:defaultValue="true"/>

        <com.aicp.extras.preference.StatusBarVolteStylePreference
            android:key="volte_icon_style"
            android:title="@string/volte_icon_style_title"
            android:summary="%s"
            android:defaultValue="0" />
        <com.aicp.extras.preference.StatusBarVowifiStylePreference
            android:key="vowifi_icon_style"
            android:title="@string/vowifi_icon_title"
            android:summary="%s"
            android:defaultValue="0" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="statusbar_battery_category"
        android:title="@string/status_bar_battery_category_title">
       <com.aicp.gear.preference.SystemSettingMasterSwitchPreference
           android:key="statusbar_battery_bar"
           android:title="@string/battery_bar_title"
           android:summary="@string/battery_bar_summary"
           android:defaultValue="false"
           android:fragment="com.aicp.extras.fragments.BatteryBar" />

    </PreferenceCategory>
    <PreferenceCategory
       android:key="statusbar_others_category"
       android:title="@string/status_bar_others_category_title">

       <com.aicp.gear.preference.SecureSettingSwitchPreference
            android:key="show_wifi_standard_icon"
            android:title="@string/show_wifi_standard_icon_title"
            android:summary="@string/show_wifi_standard_icon_summary"
            android:defaultValue="false"/>

       </PreferenceCategory>
</PreferenceScreen>
